--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
-Revision history for CPAN-Index-API
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
+    - Updated the build's dist.ini
+    - Cleaned up some documentation
+    - Removed all use of File::Slurp in favor of Path::Tiny
+    - No longer use File::Slurp for reading DATA sections
 
 0.007   1 October 2012
 
@@ -30,4 +36,3 @@ Revision history for CPAN-Index-API
 0.001   30 July 2012
 
         * Initial release
-
